# llm-experiments

./: .gitignore  LangChain_tutorial.ipynb  README.md  cot-sc.py  cot.py  ir.py  pyproject.toml  test_openai.sh
llm_experiments/: __init__.py  cot-sc.py  cot.py  cotsc.py  tot.py
llm_experiments/cot/: __init__.py  cot.py  cotsc.py
llm_experiments/cot/samplers/: __init__.py  reprompting.py  weighted.py
llm_experiments/sc/: concord.py  diversity.py  sc.py
llm_experiments/utils/: __init__.py  prompt_check.py  tikdollar.py
notebooks/: LangChain_tutorial.ipynb  README.md  openai_embeddings.ipynb
notebooks/cotsc/: classification.toml  cotsc.ipynb
scripts/: test_openai.sh
